--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -11,12 +11,12 @@ nav ul:hover {
 }
 
 .nav-link {
-    @apply text-3xl duration-200 will-change-transform h-[55px] flex items-center text-gray-500 dark:text-gray-400 rounded-lg px-4 py-2;
+    @apply text-3xl duration-200 will-change-transform h-[55px] flex items-center text-gray-500  dark:text-gray-400 rounded-lg px-4 py-2;
     transition: all 0.3s ease-in-out;
 }
 
 .nav-link:hover {
-    @apply scale-[1.08] pl-5 text-gray-700 dark:text-gray-200 bg-gray-200 dark:bg-gray-800 shadow-md;
+    @apply scale-[1.08] pl-5 text-[#7E99A3] dark:text-gray-200 bg-gray-200 dark:bg-gray-800 shadow-md;
 }
 
 .nav-link span {
@@ -42,4 +42,7 @@ nav ul:hover {
 
 .logout-btn:hover span {
     @apply opacity-100 ml-14;
+}
+.logouts:hover{
+    @apply text-red-500
 }
